# SciVis_Android

./: .gitignore  README
app/: .gitignore  CMakeLists.txt  README.md  build.gradle  cmakeArguments  local.properties
app/Resources/: Shaders  config.json
app/Resources/Models/: arrow.3ds
app/cmake/: AndroidNdkGdb.cmake  gdb.cmake
app/gradle/wrapper/: gradle-wrapper.properties
app/libs/: .gitignore  armeabi  gdb.setup
app/src/androidTest/java/com/sereno/vfs/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/sereno/vfv/: ExampleInstrumentedTest.java
app/src/main/: .gitignore  AndroidManifest.xml
app/src/main/cpp/Shaders/: cloudPoint.frag  cloudPoint.geom  cloudPoint.vert  color.frag  color.vert  colorGrid.frag  colorGrid.geom  colorGrid.vert  colorPhong.frag  colorPhong.vert  cpcp.frag  cpcp.vert  normalize1D.frag  normalize1D.vert  planeVolumeRendering.frag  planeVolumeRendering.vert  redToGray.frag  redToGray.vert  simpleTexture.frag  simpleTexture.vert  uniColor.frag  uniColor.vert  vectorField.frag  vectorField.vert
app/src/main/cpp/include/: CLData.h  ColorMode.h  Event.h  FluidDataset.h  GLRenderer.h  GLSurfaceViewData.h  HeadsetStatus.h  MainVFV.h  MeshLoader.h  Quaternion.h  Rectangle2.h  Rectangle3.h  ResourcesManager.h  Transformable.h  VFVData.h  image.h  jniData.h  main.h  nativeFluidDataset.h  nativeGLSurfaceView.h  nativeNativeEvent.h  nativeTransferFunction.h  nativeVFVData.h  utils.h
app/src/main/cpp/include/Datasets/: BinaryDataset.h  Dataset.h  DatasetHistograms.h  DatasetMetaData.h  SubDataset.h  SubDatasetMetaData.h  VTKDataset.h  nativeBinaryDataset.h  nativeCloudPointDataset.h  nativeDataset.h  nativeSubDataset.h  nativeSubDatasetGroup.h  nativeSubDatasetSubjectiveStackedGroup.h  nativeVTKDataset.h  nativeVTKParser.h  nativeVectorFieldDataset.h
app/src/main/cpp/include/Datasets/Annotation/: nativeAnnotationLogComponent.h  nativeAnnotationLogContainer.h  nativeAnnotationPosition.h  nativeDrawableAnnotationLogComponent.h  nativeDrawableAnnotationPosition.h
app/src/main/cpp/include/Graphics/: Color.h  DefaultGameObject.h  Drawable.h  DrawableTexture.h  FBO.h  FBORenderer.h  GLRenderer.h  GPUData.h  GameObject.h  MeshData.h  Render.h  Shader.h  Texture.h  VectorField.h
app/src/main/cpp/include/Graphics/Materials/: CPCPMaterial.h  CloudPointMaterial.h  ColorGridMaterial.h  ColorMaterial.h  Material.h  NormalizeMaterial.h  PhongMaterial.h  RedToGrayMaterial.h  SimpleTextureMaterial.h  UniColorMaterial.h
app/src/main/cpp/include/Graphics/SciVis/: CloudPointGameObject.h  DefaultSciVis.h  SciVis.h  SciVisColor.h  VTKStructuredGridGameObject.h  VTKStructuredGridPointGameObject.h  VectorField.h  VolumeRenderingPlaneAlgorithm.h
app/src/main/cpp/include/Graphics/Shapes/: Circle.h  Cone.h  Cube.h  Cylinder.h  Geometry.h  Sphere.h
app/src/main/cpp/include/Graphics/VolumeSelect/: Lasso.h
app/src/main/cpp/src/: FluidDataset.cpp  GLRenderer.cpp  GLSurfaceViewData.cpp  MainVFV.cpp  MeshLoader.cpp  Transformable.cpp  VFVData.cpp  image.cpp  jniData.cpp  main.cpp  nativeFluidDataset.cpp  nativeGLSurfaceView.cpp  nativeTransferFunction.cpp  nativeVFVData.cpp
app/src/main/cpp/src/Datasets/: BinaryDataset.cpp  Dataset.cpp  DatasetHistograms.cpp  DatasetMetaData.cpp  SubDatasetMetaData.cpp  VTKDataset.cpp  nativeBinaryDataset.cpp  nativeCloudPointDataset.cpp  nativeDataset.cpp  nativeSubDataset.cpp  nativeSubDatasetGroup.cpp  nativeSubDatasetSubjectiveStackedGroup.cpp  nativeVTKDataset.cpp  nativeVTKParser.cpp  nativeVectorFieldDataset.cpp
app/src/main/cpp/src/Datasets/Annotation/: nativeAnnotationLogComponent.cpp  nativeAnnotationLogContainer.cpp  nativeAnnotationPosition.cpp  nativeDrawableAnnotationLogComponent.cpp  nativeDrawableAnnotationPosition.cpp
app/src/main/cpp/src/Graphics/: Color.cpp  DefaultGameObject.cpp  Drawable.cpp  FBO.cpp  FBORenderer.cpp  GLRenderer.cpp  GameObject.cpp  MeshData.cpp  Render.cpp  Shader.cpp  Texture.cpp  VectorField.cpp
app/src/main/cpp/src/Graphics/Materials/: CPCPMaterial.cpp  CloudPointMaterial.cpp  ColorGridMaterial.cpp  ColorMaterial.cpp  Material.cpp  NormalizeMaterial.cpp  PhongMaterial.cpp  RedToGrayMaterial.cpp  SimpleTextureMaterial.cpp  UniColorMaterial.cpp
app/src/main/cpp/src/Graphics/SciVis/: CloudPointGameObject.cpp  DefaultSciVis.cpp  SciVisColor.cpp  VTKStructuredGridPointGameObject.cpp  VectorField.cpp
app/src/main/cpp/src/Graphics/Shapes/: Circle.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Geometry.cpp  Sphere.cpp
app/src/main/cpp/src/Graphics/VolumeSelect/: Lasso.cpp
app/src/main/java/com/sereno/: Tree.java  VFVViewPager.java
app/src/main/java/com/sereno/color/: Color.java  ColorMode.java  HSVColor.java  LABColor.java  LUVColor.java  MSHColor.java  XYZColor.java
app/src/main/java/com/sereno/gl/: GLSurfaceView.java  VFVSurfaceView.java
app/src/main/java/com/sereno/math/: Quaternion.java  Vector3.java
app/src/main/java/com/sereno/vfs/: MainActivity.java  OnClickListenerDialogInterface.java  OpenConnectDialogFragment.java  OpenDatasetDialogFragment.java
app/src/main/java/com/sereno/vfv/: AnnotationsFragment.java  DatasetsFragment.java  (+7 more)
app/src/main/res/drawable/: annotation_position.xml  pause_time.xml  pause_time_item.xml  position_button.xml  post_rotation_button.xml  reorder.xml  subj_view_icon.xml  table_divider.xml  tangibleButton.xml  tangible_button.xml
app/src/main/res/layout/: annotation_key_entry.xml  annotation_log_position_entry.xml  annotations_fragment.xml  dataset_icon_layout.xml  dataset_key_entry.xml  datasets_fragment.xml  drawable_annotation_position_entry.xml  drawer_layout.xml  gtf_layout.xml  gtf_size_prop_view.xml  main_activity.xml  merging_tf_view.xml  open_annotation_log_dialog.xml  open_connection_dialog.xml  open_create_sd_dialog.xml  open_create_sv_dialog.xml  open_dataset_dialog.xml  open_vtk_dataset_dialog.xml
app/src/main/res/menu/: annotation_type_menu.xml  subdataset_menu.xml  toolbar_menu.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/resources_test/lib/armeabi-v7a/: wrap.sh
(+118 files in other folders)
